Changes since 0.4.6
1. Documentation tweaks (Manfred Hanke)
2. src/cfitsio-module.c: Added support for SLANG_LONG_TYPE to
   the read_key function.
3. src/fits.sl: Renamed the private function do_fits_error to
   fits_check_error and made it public.
4. src/fits.sl, src/version.h,...: Version numbers now track the
   changes.txt file.
5. src/fits.sl: Added wrappers for fits_get_num_hdus, fits_movrel_hdu,
   fits_movabs_hdu.
6. src/fits.sl: Added fits_delete_key/col wrappers.
7. src/fits.sl: fits_info: Changed format specifier %s to %S for the fits
   descriptor.
8. src/fits.sl: Added support for a casesens qualifier to enable
   case-sensitive column names. (Manfred Hanke, Christian Schmid).
9. src/Makefile.in: generate cfitsio.h to include fitsio.h to ensure
   that the specified fitsio.h file is picked up.  Unfortunately,
   fitsio.h is often scattered all over the filesystem.
10. src/fits.sl: Fixed a regression in fits_read_cell
11. src/cfitsio-module.c: The fits_get_eqcoltype function returns a
    width value such that the number of substrings is repeat/width.
    The module was interpreting the width as the number of substrings.
    Note that the fits standard does not define a width for TFORM
    fields.  Apparantly this is a cfitsio extension.
12. src/fits.sl:fits_write_binary_table: Added 64 bit integer support.
13. src/cfitsio-module.c: Added explicit support for writing short and
    long integer keywords.
14. src/cfitsio-module.c: If fits_update_key is passed a char-type,
    then that value will be written as a fits logical keyword value.
15. configure: Parse /etc/ld.so.conf to find additional system lib
    directories.