@@ -37,7 +37,7 @@ ELF_CFLAGS="$ELF_CFLAGS $IEEE_CFLAGS"
 CFLAGS="$CFLAGS $IEEE_CFLAGS"
 
 AC_CONFIG_HEADER(src/config.h:src/config.hin)
-AC_OUTPUT(Makefile:autoconf/Makefile.in src/Makefile)
+AC_OUTPUT(Makefile:autoconf/Makefile.in src/Makefile src/tests/Makefile)
 
 echo ""
 echo "You are compiling with the following compiler configuration:"
