@@ -1,4 +1,4 @@
-#define MODULE_VERSION_STRING	"pre0.4.7-15"
+#define MODULE_VERSION_STRING	"pre0.4.7-16"
 #define MODULE_VERSION_NUMBER	407
 #define MODULE_VERSION_NUMSTR	"0.4.7"
 
